Update ThreadConfig.java